# SHSH

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: release-linux.yml  release-macos.yml  release-windows.yml
core/: Host.cpp  Host.h  TransferInfo.cpp
net/: Broadcaster.h  Download.h  Server.h
res/: res.qrc
res/styles/: style.qss
settings/: Group.cpp  ISetting.h  Settings.h  SettingsStorage.cpp
settings/General/: General.h
settings/General/Profile/: LocalHost.cpp  Profile.cpp  Profile.h
settings/General/Storage/: DownloadDir.cpp
settings/Network/: Network.cpp  Network.h
settings/Network/Broadcast/: Broadcast.h  Port.h
settings/Network/Transfer/: Transfer.cpp  TransferPort.cpp  TransferPort.h
src/: CMakeLists.txt  config.h.in  deploy-windows.cmake.in  main.cpp
src/core/: TransferInfo.cpp  TransferInfo.h
src/install/: install.cmake
src/install/linux/: SHShare.desktop  dependencies.cmake.in  linux.cmake
src/install/mac/: logo.icns  mac.cmake
src/install/win/: component.js  controller.js  dependencies.cmake  dependencies.cmake.in  shshare.rc  win.cmake
src/launcher/: Launcher.cpp  Launcher.h
src/net/: Broadcaster.cpp  Connection.cpp  Connection.h  Download.cpp  Download.h  Network.cpp  Network.h  Server.cpp  Server.h  Upload.cpp  Upload.h
src/net/Messages/: GetHostInfo.cpp  GetHostInfo.h  GetInfo.cpp  GetInfo.h  HandShake.cpp  HandShake.h  HostInfo.cpp  HostInfo.h  INetworkMessage.h  NetworkMessage.cpp  NetworkMessage.h  Types.h
src/res/: res.qrc
src/res/styles/: style.qss
src/res/text/: license.txt
src/settings/: Group.h  Settings.cpp  SettingsStorage.h
src/settings/General/: General.cpp
src/settings/General/Profile/: LocalHost.h
src/settings/General/Storage/: DownloadDir.cpp  DownloadDir.h  ReplaceExistingFile.cpp  ReplaceExistingFile.h  Storage.cpp  Storage.h
src/settings/Network/Broadcast/: Broadcast.cpp  Interval.cpp  Interval.h  Port.cpp
src/settings/Network/Transfer/: FileBuffSize.cpp  FileBuffSize.h  Transfer.h
src/ui/: DestinationDialog.cpp  DestinationDialog.h  DestinationDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  Tray.cpp  Tray.h
src/ui/DestinationDialog/: EnterIpPage.cpp  EnterIpPage.h  ErrorPage.cpp  ErrorPage.h  SelectReceiverPage.cpp  SelectReceiverPage.h  SpinnerPage.cpp  SpinnerPage.h
src/ui/models/: HostList.cpp  HostList.h
src/ui/pages/: About.cpp  Downloads.h  Settings.cpp  Settings.h  Uploads.cpp
src/ui/widgets/: FilledButton.cpp  FilledButton.h  IconButton.cpp  IconButton.h  IpAddress.cpp  IpAddress.h  OutlinedButton.cpp  OutlinedButton.h  StyledWidget.h
src/ui/widgets/IpAddress/: IpAddressItem.cpp  IpAddressItem.h  IpValidator.cpp  IpValidator.h
src/ui/widgets/downloads/: ToolBar.cpp
src/ui/widgets/page/: Page.cpp  Page.h  Title.h
src/ui/widgets/settings/: BroadcastInterval.cpp  BroadcastPort.cpp  BufferSize.cpp  DownloadDir.h  Label.cpp  Label.h  Name.h  Number.cpp  Number.h  Path.cpp  Path.h  Port.h  Spacer.cpp  Tab.cpp  TextEdit.cpp  TextEdit.h  Toggle.cpp  Toggle.h  ToggleButton.h  TransferBufferSize.h
src/ui/widgets/sidebar/: Button.cpp  Button.h  SideBar.cpp  SideBar.h
src/ui/widgets/table/: Table.cpp  Table.h  TableModel.cpp  TableModel.h
src/ui/widgets/uploads/: ToolBar.cpp
ui/: MainWindow.h  MainWindow.ui  Tray.cpp  Tray.h
ui/pages/: About.h  Downloads.cpp  Pages.h  Uploads.h
ui/widgets/: StyledWidget.cpp
ui/widgets/downloads/: ToolBar.h
ui/widgets/page/: Title.cpp
ui/widgets/settings/: BroadcastInterval.cpp  BroadcastInterval.h  BroadcastPort.h  BufferSize.h  DownloadDir.cpp  Interval.cpp  Interval.h  Name.cpp  OverwriteFiles.cpp  OverwriteFiles.h  Port.cpp  Spacer.h  Tab.h  ToggleButton.cpp  TransferBufferSize.cpp  TransferPort.cpp  TransferPort.h
ui/widgets/table/: Table.h
ui/widgets/uploads/: ToolBar.h
